Hamburger alignment issue fix and last commit.eveything is fine.Thank You...

--- a/styles/responsive.css
+++ b/styles/responsive.css
@@ -1,11 +1,8 @@
 @media (max-width: 576px) {
 
-    /* Hide navbar links */
     .nav-links {
         display: none;
     }
-
-    /* Align .brand to the left and remove left margin */
     .brand {
         text-align: left;
         margin-left: 0;
@@ -13,7 +10,6 @@
         margin-right: auto;
     }
 
-    /* Ensure buttons are displayed in a row */
     .btn-container {
         flex-direction: row;
         justify-content: space-between;
@@ -31,14 +27,12 @@
         margin-top: 2rem;
     }
 
-    /* Adjust .habit-goal flex direction to column */
     .habit-goal {
         display: flex;
         flex-direction: column;
         align-items: center;
     }
 
-    /* Other styles for responsive design */
     .banner-container {
         width: 100%;
         height: auto;
@@ -58,7 +52,7 @@
         display: flex;
         align-items: center;
         position: absolute;
-        top: 15%;
+        top: 14%;
         right: 1rem;
         transform: translateY(-50%);
         
